--- a/_scss/partials/_intro.scss
+++ b/_scss/partials/_intro.scss
@@ -74,7 +74,7 @@
       vertical-align: middle; // Vertically align the emoji with the text
     }
 
-    .pointer {
+    .emoji.pointer {
       font-size: 1.5em; // Optional: Adjust pointer size for better visibility
       cursor: pointer; // Make it interactive
       transition: transform 1s ease-in-out; // Smooth transition
