two new projects

--- a/_includes/other-projects.html
+++ b/_includes/other-projects.html
@@ -1,6 +1,39 @@
 <section class="section other-projects">
   <div class="section__title">Projects</div>
   <div class="section__content">
+  
+    <div class="project">
+      <div class="project__name">
+        <a href="https://recipe-verse.vercel.app" target="_blank">RecipeVerse (Personal Project)</a>
+      </div>
+      <p>
+        Developed a full-stack recipe application integrating TF-IDF search for efficient, relevance-ranked recipe retrieval. Designed a modern, responsive UI with React and TypeScript, optimizing user experience and accessibility. Integrated Firebase authentication for secure user account management and personalized recipe storage. Engineered a structured data pipeline to parse and index a large CSV dataset, ensuring rapid search performance.
+      </p>
+      <div class="project__used">
+        <span class="project__used__item">React</span>
+        <span class="project__used__item">TypeScript</span>
+        <span class="project__used__item">HTML</span>
+        <span class="project__used__item">CSS</span>
+        <span class="project__used__item">Firebase</span>
+        <span class="project__used__item">Vercel</span>
+      </div>
+    </div>
+    
+    <div class="project">
+      <div class="project__name">
+        <a href="https://spotify-top-artists-trivia.vercel.app" target="_blank">Spotify Top Artists Trivia App (Personal Project)</a>
+      </div>
+      <p>
+        Built an interactive trivia game leveraging the Spotify Web API to dynamically generate questions based on user data. Developed the backend using Python (Flask) and Jinja templating, integrating seamlessly with the frontend. Deployed the application on Vercel to ensure scalability, high availability, and low-latency user interactions.
+      </p>
+      <div class="project__used">
+        <span class="project__used__item">Python</span>
+        <span class="project__used__item">Flask</span>
+        <span class="project__used__item">Jinja</span>
+        <span class="project__used__item">Spotify API</span>
+        <span class="project__used__item">Vercel</span>
+      </div>
+    </div>
     <div class="project">
       <div class="project__name">
         <a>Calial (Software Studio Final Project)</a>
